add: registration view
