# backend/user/api.yaml
@@ -3,6 +3,8 @@ info:
   title: User service API
   description: API description in Markdown.
   version: 1.0.0
+servers:
+  - url: http://127.0.0.1:5000
 
 paths:
   /register:
@@ -25,6 +27,12 @@ paths:
         #4xx type errors, TODO: specify exact error codes
         '400':
           description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorResponse'
+        '409':
+          description: Email already in use
           content:
             application/json:
               schema:
@@ -268,7 +276,7 @@ paths:
             schema:
               $ref: '#/components/schemas/userRole'
       responses:
-        200:
+        '200':
           description: OK
         '403':
           description: Invalid role of current user
@@ -276,7 +284,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/errorResponse'
-        404:
+        '404':
           description: User not found
           content:
             application/json:
@@ -303,7 +311,7 @@ paths:
             schema:
               $ref: '#/components/schemas/accountType'
       responses:
-        200:
+        '200':
           description: OK
         '403':
           description: Invalid role of current user
@@ -311,13 +319,13 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/errorResponse'
-        404:
+        '404':
           description: User not found
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/errorResponse'
-        409:
+        '409':
           description: User is missing required info (e.g. university info for a university student)
           content:
             application/json:
@@ -413,7 +421,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/studentInfo'
-        404:
+        '404':
           description: User is not a university student
           content:
             application/json:
@@ -702,7 +710,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/errorResponse'
-        409:
+        '409':
           description: Group already exists
           content:
             application/json:
@@ -790,11 +798,24 @@ components:
   schemas:
     errorResponse:
       title: 'Error response'
-      description: 'Common response with error message'
       required:
-        - error_msg
+        - errors
       properties:
-        error_msg:
+        errors:
+          type: array
+          items:
+            $ref: '#/components/schemas/errorValue'
+    errorValue:
+      title: 'Error value'
+      required:
+        - status
+        - title
+      properties:
+        class:
+          type: string
+        status:
+          type: integer
+        title:
           type: string
     registration:
       title: 'Registration request info'
@@ -921,7 +942,7 @@ components:
       properties:
         auth_credentials:
           $ref: '#/components/schemas/authCredentials'
-        rememver_me:
+        remember_me:
           description: Greatly refresh token expiration time
           type: boolean
     authCredentials:
@@ -998,6 +1019,7 @@ components:
           type: integer
         username:
           type: string
+          maxLength: 20
         role:
           $ref: '#/components/schemas/roleType'
         type:
